[package]
name = "ServerOG"
version = "0.1.0"
authors = ["rashad <rashadmahmo@gmail.com>"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
threadpool = "1.5.0"
serverOG_utils = {path = "serverOG_utils", version = "0.1.0"}
tokio-proto = "0.1"